--- a/processing/chat-parser/package.json
+++ b/processing/chat-parser/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "parse": "node src/index.ts",
+    "parse": "rm -rf dist && npm run build && node ./dist/index.js",
     "colons": "rm -rf dist && npm run build && node ./dist/colons.test.js"
   },
   "author": "",
